Mappa elrendezés és hoverezés

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <link rel="stylesheet" href="style.css">
 
-        <link rel="shortcut icon" href="icon2.png">
+        <link rel="shortcut icon" href="\Pic\icon2.png">
 
         <script src="script.js"></script>
     </head>
@@ -27,17 +27,17 @@
 
                 <div id="headerdiv1">
 
-                    <img src="fc.png" alt="facebook logi" wild="25px" height="25px" class="kep1">
+                    <a href="https://www.facebook.com/"><img src="\Pic\fc.png" alt="facebook logi" wild="25px" height="25px" class="kep1"></a>
 
-                    <img src="inta.png" alt="facebook logi" wild="25px" height="25px" class="kep2">
+                    <a href="https://www.instagram.com/"><img src="\Pic\inta.png" alt="intagramm logi" wild="25px" height="25px" class="kep2"></a>
 
-                    <img src="you.png" alt="facebook logi" wild="25px" height="25px" class="kep3">
+                    <a href="https://www.youtube.com/"><img src="\Pic\you.png" alt="youtube logi" wild="25px" height="25px" class="kep3"></a>
 
                 </div>
 
                 <div id="headerdiv2">
 
-                    <p>📍 Tatabánya, erdész utca 01. &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp📍 Környe, vadász utca 02. &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 📍 Oroszlány, erdész utca 01. &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp ✉️ holaszemcsim@gmail.com </p>
+                    <a class="link1" href="https://www.google.com/maps/?hl=hu">📍 Tatabánya, erdész utca 01. &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a><a class="link1" href="https://www.google.com/maps/?hl=hu">📍 Környe, vadász utca 02. &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a><a class="link1" href="https://www.google.com/maps/?hl=hu">📍 Oroszlány, erdész utca 01. &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a><a class="link1" href="https://gmail.com/">✉️ holaszemcsim@gmail.com</a>
 
                 </div>
         
@@ -47,16 +47,17 @@
 
                 <div id="nav1">
 
-                    <a href="index.html"><img src="icon.png" alt="Róka icon" wild="110px" height="110px"></a>
+                    <a href="index.html"><img src="\Pic\icon.png" alt="Róka icon" wild="110px" height="110px"></a>
 
                 </div>
                 <div id="nav2">
-                    <p>Látásvizsgálat&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-                        Termékeink&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-                        Akciók&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-                        Karrier&nbsp&nbsp&nbsp&nbsp&nbsp
-                        Blog&nbsp&nbsp&nbsp&nbsp&nbsp
-                        Kapcsolat</p>
+                    &NonBreakingSpace;
+                    <a id="a1" href="index.html">Látásvizsgálat</a>&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;
+                    <a id="a1" href="index.html">Termékeink</a>&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;
+                    <a id="a1" href="index.html">Akciók</a>&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;
+                    <a id="a1" href="index.html">Karrier</a>&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;
+                    <a id="a1" href="index.html">Blog</a>&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;
+                    <a id="a1" href="index.html">Kapcsolat</a>
                 </div>
 
             <!--Navigációs pult vége-->
@@ -65,7 +66,7 @@
 
                     <div id="nagykep1">
 
-                        <img src="szemuveg.jpg" alt="Szemüveg kép" wild="1780px" height="600px">
+                        <img src="\Pic\szemuveg.jpg" alt="Szemüveg kép" wild="1780px" height="595px">
 
                     </div>
 
@@ -81,7 +82,7 @@
 
                         <div id="bk2">
 
-                            <img src="dij.png" alt="Egy díj" wild="200px" height="200px">
+                            <img src="\Pic\dij.png" alt="Egy díj" wild="200px" height="200px">
                             <br>
                             <button class="btn1" onclick="bt1()">Tudj meg többet a díjról!</button>
 
