--- a/index.html
+++ b/index.html
@@ -44,20 +44,26 @@
             </header>
 
             <!--Navigációs pult-->
+                <div id="fix">
+                    
+                    <div id="nav1">
 
-                <div id="nav1">
+                        <a href="index.html"><img src="\Pic\icon.png" alt="Róka icon" wild="110px" height="110px"></a>
 
-                    <a href="index.html"><img src="\Pic\icon.png" alt="Róka icon" wild="110px" height="110px"></a>
+                    </div>
+                    
+                    <div id="nav2">
 
-                </div>
-                <div id="nav2">
-                    &NonBreakingSpace;
-                    <a id="a1" href="index.html">Látásvizsgálat</a>&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;
-                    <a id="a1" href="index.html">Termékeink</a>&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;
-                    <a id="a1" href="index.html">Akciók</a>&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;
-                    <a id="a1" href="index.html">Karrier</a>&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;
-                    <a id="a1" href="index.html">Blog</a>&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;
-                    <a id="a1" href="index.html">Kapcsolat</a>
+                        &NonBreakingSpace;
+                        <a id="a1" href="index.html">Látásvizsgálat</a>&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;
+                        <a id="a1" href="index.html">Termékeink</a>&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;
+                        <a id="a1" href="index.html">Akciók</a>&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;
+                        <a id="a1" href="index.html">Karrier</a>&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;
+                        <a id="a1" href="index.html">Blog</a>&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;&NonBreakingSpace;
+                        <a id="a1" href="index.html">Kapcsolat</a>
+
+                    </div>
+
                 </div>
 
             <!--Navigációs pult vége-->
