--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
             <div id="footer3">
                                                 
-                <p id="jog">Minden jog fenntartva</p>
+                <p id="jog">Minden jog fenntartva&#169</p>
 
                 <p id="jog2">Az oldalt készítette Szántó Áron, Tóth-Fazekas Balázs</p>
 
