--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
                 <div id="headerdiv1">
 
-                    <a href="https://www.facebook.com/"><img src="\Pic\fc.png" alt="facebook logi" wild="25px" height="25px" class="kep1"></a>
+                    <a href="https://www.facebook.com/"><img src=".\Pic\fc.png" alt="facebook logi" wild="25px" height="25px" class="kep1"></a>
 
-                    <a href="https://www.instagram.com/"><img src="\Pic\inta.png" alt="intagramm logi" wild="25px" height="25px" class="kep2"></a>
+                    <a href="https://www.instagram.com/"><img src=".\Pic\inta.png" alt="intagramm logi" wild="25px" height="25px" class="kep2"></a>
 
-                    <a href="https://www.youtube.com/"><img src="\Pic\you.png" alt="youtube logi" wild="25px" height="25px" class="kep3"></a>
+                    <a href="https://www.youtube.com/"><img src=".\Pic\you.png" alt="youtube logi" wild="25px" height="25px" class="kep3"></a>
 
                 </div>
 
@@ -48,7 +48,7 @@
                     
                     <div id="nav1">
 
-                        <a href="index.html"><img src="\Pic\icon.png" alt="Róka icon" wild="110px" height="110px"></a>
+                        <a href="index.html"><img src=".\Pic\icon.png" alt="Róka icon" wild="110px" height="110px"></a>
 
                     </div>
                     
@@ -72,7 +72,7 @@
 
                     <div id="nagykep1">
 
-                        <img src="\Pic\szemuveg.jpg" alt="Szemüveg kép" wild="1780px" height="595px">
+                        <img src=".\Pic\szemuveg.jpg" alt="Szemüveg kép" wild="1780px" height="595px">
 
                     </div>
 
@@ -88,7 +88,7 @@
 
                         <div id="bk2">
 
-                            <img src="\Pic\dij.png" alt="Egy díj" wild="200px" height="200px">
+                            <img src=".\Pic\dij.png" alt="Egy díj" wild="200px" height="200px">
                             <br>
                             <button class="btn1" onclick="bt1()">Tudj meg többet a díjról!</button>
 
@@ -119,7 +119,7 @@
 
                             <p id="kekf">Oldalunkon kékfényszűrt szemüveget is találsz</p>
 
-                            <img src="\Pic\nagykep2.png" alt="Szemüveg kép" wild="" height="643px">
+                            <img src=".\Pic\nagykep2.png" alt="Szemüveg kép" wild="" height="643px">
 
                         </div>
 
@@ -175,11 +175,11 @@
 
             <div id="footer2">
 
-                <a href="https://www.facebook.com/"><img src="\Pic\fc.png" alt="facebook logi" wild="25px" height="25px" id="kep1"></a>
+                <a href="https://www.facebook.com/"><img src=".\Pic\fc.png" alt="facebook logi" wild="25px" height="25px" id="kep1"></a>
 
-                <a href="https://www.instagram.com/"><img src="\Pic\inta.png" alt="intagramm logi" wild="25px" height="25px" id="kep2"></a>
+                <a href="https://www.instagram.com/"><img src=".\Pic\inta.png" alt="intagramm logi" wild="25px" height="25px" id="kep2"></a>
 
-                <a href="https://www.youtube.com/"><img src="\Pic\you.png" alt="youtube logi" wild="25px" height="25px" id="kep3"></a>
+                <a href="https://www.youtube.com/"><img src=".\Pic\you.png" alt="youtube logi" wild="25px" height="25px" id="kep3"></a>
 
             </div>
 
